# hala-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
apps/: Cargo.toml
bash/: qtun-client.sh  qtun-server.sh
crates/future/: Cargo.toml
crates/future/benches/: executor.rs
crates/future/src/: batching.rs  event_map.rs  executor.rs  future.rs  lib.rs  poll.rs
crates/io/: Cargo.toml
crates/io/benches/: timeout.rs
crates/io/src/: context.rs  current.rs  driver.rs  driver_ext.rs  executor.rs  file.rs  interest.rs  io_group.rs  lib.rs  read_buf.rs  sleep.rs  test.rs  timeout.rs  wouldblock.rs
crates/io/src/mio/: driver.rs  mod.rs  poller.rs  timer.rs  with_poller.rs
crates/leveldb/: Cargo.toml
crates/leveldb/src/: lib.rs
crates/leveldb/tests/: leveldb.rs
crates/lockfree/: Cargo.toml
crates/lockfree/benches/: lockfree.rs
crates/lockfree/src/: lib.rs  queue.rs  timewheel.rs
crates/ops/: Cargo.toml
crates/ops/src/: deref.rs
crates/pprof/: .gitignore  Cargo.toml  build.rs
crates/pprof/benches/: alloc.rs  log.rs  pprof.rs  prof_alloc.rs  sysm_alloc.rs
crates/pprof/derive/: Cargo.toml
crates/pprof/derive/src/: lib.rs
crates/pprof/proto/: backtrace.proto
crates/pprof/src/: backtrace.rs  cpu.rs  external.cpp  external.rs  lib.rs  pprof.rs
crates/pprof/src/alloc/: alloc.rs  mod.rs  profile.rs  storage.rs
crates/pprof/src/backtrace/: mod.rs
crates/pprof/src/c/: external.cpp  mod.rs
crates/pprof/src/gperf/: gperf.rs
crates/pprof/src/profiler/: cpu.rs  frames.rs  heap.rs  mod.rs  report.rs
crates/pprof/src/prolog/: macros.rs  mod.rs  profiling.rs
crates/pprof/src/proto/: backtrace.rs  mod.rs  profile.rs
crates/pprof/tests/: cpu_profiler.rs  derive.rs  heap_profiler.rs  prolog.rs  test_alloc.rs
crates/sync/: Cargo.toml
crates/sync/src/: api.rs  lib.rs  maker.rs  parking_lot.rs  spin.rs
crates/test/: Cargo.toml
future-mediator/: Cargo.toml
future-mediator/benches/: mediator.rs
future-mediator/src/: lib.rs
hala/: Cargo.toml
hala-io-context/: Cargo.toml
hala-io-driver/: Cargo.toml
hala-io-driver/benches/: driver.rs  typed_handle.rs  vtable.rs
hala-io-driver/src/: async_io.rs  driver.rs  driver_ext.rs  event.rs  file.rs  fs.rs  global.rs  lib.rs  net.rs  notifier.rs  poller.rs  registry.rs  tcp.rs  thread_model.rs  time.rs  udp.rs  utils.rs
hala-io-driver/src/global/: driver.rs  mod.rs  poller.rs  spawner.rs
hala-io-driver/src/mio/: driver.rs  mod.rs  notifier.rs  poller.rs  time_wheel.rs  timer.rs  with_poller.rs
hala-io-test/: Cargo.toml
hala-io-test/derive/: Cargo.toml
hala-io-test/derive/src/: lib.rs
hala-io-test/src/: lib.rs
hala-io-timeout/: Cargo.toml
hala-io-timeout/src/: lib.rs
hala-io-util/: Cargo.toml  Cargo.toml~
hala-io-util/src/: async_io.rs  io_group.rs  lib.rs  mux.rs  poll.rs  read_buf.rs  spawner.rs  test.rs  timeout.rs
hala-io-util/src/current/: driver.rs  mod.rs  poller.rs  spawner.rs
hala-kcp/: Cargo.toml
hala-kcp/src/: lib.rs
hala-kcp/tests/: kcp.rs
hala-mux/: Cargo.toml
hala-mux/src/: lib.rs
hala-net/: Cargo.toml  Makefile.toml
hala-net/benches/: tcp_bench.rs  udp_bench.rs  udp_group.rs
hala-net/src/: errors.rs  lib.rs  udp.rs
hala-net/src/quic/: acceptor.rs  client.rs  config.rs  conn.rs  conn_state.rs  connector.rs  event.rs  event_loop.rs  eventloop.rs  events.rs  inner_conn.rs  listener.rs  listener_state.rs  mod.rs  server.rs  stream.rs
hala-net/src/quic/event_loop/: client.rs
hala-net/src/quic/old/: conn_state.rs  connector.rs  listener.rs  mod.rs
hala-net/src/quic/state/: conn.rs  connector.rs  listener.rs  mod.rs  tests.rs
hala-net/src/tcp/: listener.rs  stream.rs
hala-net/src/udp/: group.rs  udp.rs
hala-net/tests/: net_test.rs  quic_test.rs  tcp_test.rs  udp_test.rs
hala-quic/: Cargo.toml
hala-quic-tunnel/: Cargo.toml
hala-quic-tunnel/src/: lib.rs  utils.rs
hala-quic-tunnel/src/client/: config.rs  mod.rs  tcp_server.rs
hala-quic-tunnel/src/poll/: mod.rs  tcp_config.json  tcp_server.rs
hala-quic/src/: lib.rs
hala-quic/src/client/: mod.rs
hala-quic/tests/: quiche_test.rs
hala-reactor/: Cargo.toml
hala-reactor/src/: context.rs  device.rs  future.rs  lib.rs  object.rs  thread_model.rs  utils.rs
hala-rproxy/: Cargo.toml  Cargo.toml~  client.sh  server.sh
hala-rproxy/src/: lib.rs  thread_per_core.rs
hala-rproxy/src/forward/: forward.rs  mod.rs  quic.rs  tcp.rs
hala-rproxy/src/gateway/: gateway.rs  mod.rs  quic.rs  tcp.rs
hala-rproxy/src/handshake/: handshake.rs
hala-socket/: Cargo.toml  Makefile.toml
hala-socket/src/: error.rs  io_device.rs  io_object.rs  lib.rs  socketaddr.rs  tester.rs  thread_model.rs  udp.rs
hala-socket/src/tcp/: listener.rs  mod.rs  stream.rs
hala-test/: Cargo.toml
hala-test/src/: lib.rs
hala-timewheel/: Cargo.toml
hala-timewheel/benches/: timewheel.rs
hala-timewheel/src/: lib.rs
hala-tunnel/: Cargo.toml
hala-tunnel-quic/: Cargo.toml
hala-tunnel-quic/src/: lib.rs
hala-tunnel/src/: lib.rs
hala/benches/: quic_bench.rs  tcp_bench.rs
hala/cert/: client.crt  client.key  server.crt  server.key
hala/src/: lib.rs
quictun/: Cargo.toml
rgnix/: Cargo.toml  client.sh  kill.sh  server.sh
rgnix/app/qtun-client/: Cargo.toml
rgnix/app/qtun-client/src/: main.rs
rgnix/app/qtun-server/: Cargo.toml
rgnix/app/qtun-server/src/: main.rs
rgnix/cert/: client.crt  hala_ca.pem  hala_ca1.pem  server.crt  server.key
rgnix/crates/rgnix/: Cargo.toml
rgnix/crates/rgnix/src/: lib.rs  rgnix.rs  utils.rs
rgnix/crates/rgnix/src/stream/: mod.rs  quic.rs  stream.rs  tcp.rs
rgnix/crates/tunnel/: Cargo.toml  all.sh  client.sh  server.sh
rgnix/crates/tunnel/qtun/: main.rs
rgnix/crates/tunnel/src/: app.rs  client.rs  lib.rs  server.rs  utils.rs
rgnix/src/: main.rs  rproxy.rs
rgnix/src/rproxy/: claps.rs  gateway.rs  jemalloc.rs  profile.rs  quic.rs  tcp.rs  tunnel.rs  utils.rs
rproxy/: Cargo.toml
shared/: Cargo.toml
sync-traits/: Cargo.toml
timewheel/: Cargo.toml
timewheel/benches/: timewheel.rs
timewheel/src/: lib.rs
(+125 files in other folders)
