[workspace]
members = ["hala-io-driver", "hala-net", "hala-test", "hala-io-util", "hala-rproxy", "external/*"]
resolver = "2"

#

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/quictun.git"
version = "0.1.2"

[workspace.dependencies]
anyhow = "^1"
async-recursion = "1.0.5"
bitmask-enum = "2.2.3"
boxcar = "^0.2.4"
bytes = "^1.5"
clap = {version = "^4.4", features = ["derive"]}
core2 = "^0.4.0"
dashmap = "5.5.3"
divan = "^0.1"
futures = {version = "^0.3.29", features = ["executor", "thread-pool"]}
futures-test = "^0.3"
lock_freedom = "0.1.0"
log = "^0.4"
mio = {version = "^0.8.9", features = ["os-poll", "net"]}
pretty_env_logger = "^0.5"
quiche = {version = "^0.20.0"}
rand = {version = "^0.8", features = ["getrandom"]}
ring = "0.17.6"
serde = {version = "^1.0", features = ["derive"]}
serde_json = {version = "^1.0"}
thiserror = "^1.0.50"
thiserror-no-std = "^2.0"

# external crates
event-map = {path = "./external/event-map", default = false, version = "^0.1"}
future-mediator = {path = "./external/future-mediator", default = false, version = "^0.1"}
hashed-timer = {path = "./external/hashed-timer", version = "^0.1"}
locks = {path = "./external/locks", version = "^0.1"}
shared = {path = "./external/shared", default = false, version = "^0.1"}
timewheel = {path = "./external/timewheel", version = "^0.1"}

# hala-io subcrates
hala-io-driver = {path = "./hala-io-driver", default = false, version = "^0.1"}
hala-io-util = {path = "./hala-io-util", version = "^0.1"}
hala-net = {path = "./hala-net", default = false, version = "^0.1"}
hala-rproxy = {path = "./hala-rproxy", version = "^0.1"}
hala-test = {path = "./hala-test", default = false, version = "^0.1"}
