[workspace]
members = [
  "hala",
  "crates/lockfree",
  "crates/sync",
  "crates/test",
  "crates/future",
  "crates/io",
  "crates/net/*",
  "crates/ops",
]
resolver = "2"

# "hala-io-driver", "hala-net", "hala-test", "hala-io-util", "external/*"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-rs.git"
version = "0.1.2"

[workspace.dependencies]
anyhow = "^1"
async-recursion = "1.0.5"
bitmask-enum = "2.2.3"
boxcar = "^0.2.4"
bytes = "^1.5"
clap = {version = "^4.4", features = ["derive"]}
cooked-waker = "5.0.0"
core2 = "^0.4.0"
dashmap = "5.5.3"
divan = "^0.1"
futures = {version = "^0.3.29", features = ["executor", "thread-pool"]}
futures-test = "^0.3"
lock_freedom = "0.1.0"
log = {version = "^0.4"}
mio = {version = "^0.8.9", features = ["os-poll", "net"]}
parking_lot = "0.12.1"
pretty_env_logger = "^0.5"
quiche = {version = "^0.20.0"}
rand = {version = "^0.8", features = ["getrandom"]}
ring = "0.17.6"
serde = {version = "^1.0", features = ["derive"]}
serde_json = {version = "^1.0"}
thiserror = "^1.0.50"
thiserror-no-std = "^2.0"
url = "^2.5.0"
uuid = "^1.6.1"

hala-future = {path = "crates/future", version = "^0.1"}
hala-io = {path = "crates/io", version = "^0.1"}
hala-lockfree = {path = "crates/lockfree", version = "^0.1"}
hala-ops = {path = "crates/ops", version = "^0.1"}
hala-quic = {path = "crates/net/quic", version = "^0.1"}
hala-rproxy = {path = "crates/net/rproxy", version = "^0.1"}
hala-sync = {path = "crates/sync", version = "^0.1"}
hala-tcp = {path = "crates/net/tcp", version = "^0.1"}
hala-test = {path = "crates/test", version = "^0.1"}
hala-udp = {path = "crates/net/udp", version = "^0.1"}
