[workspace]
exclude = ["apps"]
members = [
  "hala",
  "crates/lockfree",
  "crates/sync",
  "crates/test",
  "crates/future",
  "crates/io",
  "crates/net/*",
  "crates/ops",
  "crates/pprof",
  "crates/pprof/derive",
  "crates/leveldb",
  "crates/rproxy",
]
resolver = "2"

# "hala-io-driver", "hala-net", "hala-test", "hala-io-util", "external/*"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-rs.git"
version = "0.1.6"

[workspace.dependencies]
anyhow = "^1"
async-trait = "0.1.77"
backtrace = {version = "^0.3"}
bitmask-enum = "2.2.3"
boring = "4.4.0"
boxcar = "^0.2.4"
bson = "2.9.0"
bytes = "^1.5"
cc = "1.0.83"
clap = {version = "^4.4", features = ["derive"]}
dashmap = "5.5.3"
divan = "^0.1"
duration-str = "0.7.1"
futures = {version = "^0.3.29", features = ["executor", "thread-pool"]}
futures-test = "^0.3"
http = "^1.0"
httparse = "^1.8"
hyper = {version = "1.2.0"}
leveldb-sys = "2.0.9"
libc = "0.2.153"
lock_freedom = "0.1.0"
log = {version = "^0.4"}
mio = {version = "^0.8.9", features = ["os-poll", "net"]}
num = "0.4.1"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
pretty_env_logger = "^0.5"
protobuf = "^3.3.0"
protobuf-codegen = "^3.3.0"
protobuf-json-mapping = "3.3.0"
protoc-bin-vendored = "^3.0.0"
quiche = {version = "^0.20.0", features = ["boringssl-boring-crate"]}
quote = "^1.0"
rand = {version = "^0.8", features = ["getrandom"]}
ring = "0.17.6"
serde = {version = "^1.0", features = ["derive"]}
serde_json = {version = "^1.0"}
syn = {version = "^2.0", features = ["full", "parsing"]}
thiserror = "^1.0.50"
thiserror-no-std = "^2.0"
url = "^2.5.0"
uuid = {version = "^1.7", features = ["v4"]}

hala-future = {path = "crates/future", version = "^0.1"}
hala-io = {path = "crates/io", version = "^0.1"}
hala-leveldb = {path = "crates/leveldb", version = "^0.1"}
hala-lockfree = {path = "crates/lockfree", version = "^0.1"}
hala-ops = {path = "crates/ops", version = "^0.1"}
hala-pprof = {path = "crates/pprof", version = "^0.1"}
hala-pprof-derive = {path = "crates/pprof/derive", version = "^0.1"}
hala-quic = {path = "crates/net/quic", version = "^0.1"}
hala-rproxy = {path = "crates/rproxy", version = "^0.1"}
hala-sync = {path = "crates/sync", version = "^0.1"}
hala-tcp = {path = "crates/net/tcp", version = "^0.1"}
hala-test = {path = "crates/test", version = "^0.1"}
hala-tls = {path = "crates/net/tls", version = "^0.1"}
hala-udp = {path = "crates/net/udp", version = "^0.1"}

hala-rs = {path = "hala", version = "^0.1"}
