[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-rs.git"
version = "0.1.4"

[workspace.dependencies]
hala-qtun = {path = "../crates/rproxy/qtun", version = "^0.1", default-features = false}
hala-rs = {path = "../hala", version = "^0.1"}

log = {version = "^0.4"}
pretty_env_logger = "^0.5"
