[package]
description = "The bridge between asynchronous program and synchronous program"
documentation = "https://docs.rs/future-mediator"
edition.workspace = true
license = "MIT"
name = "future-mediator"
repository.workspace = true
version.workspace = true

[dependencies]
bitmask-enum = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
shared = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
single-thread = []

[[bench]]
harness = false
name = "mediator"
