[package]
description = "Hala io reactor framework"
edition.workspace = true
name = "hala-io-driver"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = {workspace = true}
log = {workspace = true}
mio = {workspace = true, optional = true}

[dev-dependencies]
divan = {workspace = true}
futures = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
async_io = []
default = ["mio_driver", "global", "driver_ext", "async_io"]
driver_ext = []
global = []
mio_driver = ["mio"]

[[bench]]
harness = false
name = "typed_handle"

[[bench]]
harness = false
name = "driver"
