[package]
description = "Hala io reactor framework"
documentation = "https://docs.rs/hala-io-driver"
edition.workspace = true
license = "MIT"
name = "hala-io-driver"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = {workspace = true}
dashmap = {workspace = true, optional = true}
futures = {workspace = true, optional = true}
hashed-timer = {workspace = true, optional = true}
locks = {workspace = true}
log = {workspace = true}
mio = {workspace = true, optional = true}

[dev-dependencies]
divan = {workspace = true}
futures = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
default = ["mio_driver", "global", "driver_ext"]
driver_ext = []
global = ["futures"]
mio_driver = ["mio", "dashmap", "hashed-timer"]

[[bench]]
harness = false
name = "typed_handle"

[[bench]]
harness = false
name = "driver"
