[package]
description = "Hala asynchronous io test toolkit"
edition.workspace = true
name = "hala-io-test"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
hala-io-test-derive = {path = "./derive", version = "^0.1"}
hala-reactor = {workspace = true, default = false, optional = true}

[features]
default = ["single-thread"]
multi-thread = ["hala-reactor/multi-thread"]
single-thread = ["hala-reactor/single-thread"]
