[package]
description = "Hala asynchronous io test toolkit"
edition.workspace = true
name = "hala-io-test"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = {workspace = true}
futures = {workspace = true}
hala-io-test-derive = {path = "./derive", version = "^0.1"}
hala-reactor = {workspace = true, optional = true}
log = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
debug = []
mt = ["hala-reactor/st"]
st = ["hala-reactor/st"]
