[package]
description = "Hala asynchronous io test toolkit"
documentation = "https://docs.rs/hala-io-test"
edition.workspace = true
license = "MIT"
name = "hala-io-test"
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = {workspace = true}
futures = {workspace = true}
hala-io-driver = {workspace = true}
hala-io-test-derive = {path = "./derive", version = "^0.1"}
log = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
debug = []
