[package]
edition.workspace = true
name = "hala-io-timeout"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hala-io-driver = {workspace = true}
log = {workspace = true}

[dev-dependencies]
futures = {workspace = true}
hala-io-test = {workspace = true}
pretty_env_logger = {workspace = true}
