[package]
edition.workspace = true
name = "hala-kcp"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
core2 = {workspace = true}
log = {workspace = true}
thiserror-no-std = {workspace = true}

[dev-dependencies]
pretty_env_logger = {workspace = true}
rand = {workspace = true}
