[package]
description = "Hala stream multiplexer protocol traits and extension trait"
edition.workspace = true
name = "hala-mux"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = {workspace = true}
futures = {workspace = true}
thiserror-no-std = {workspace = true}

[dev-dependencies]
futures-test = {workspace = true}
