[package]
description = "Hala network framework"
edition.workspace = true
name = "hala-net"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
hala-io-driver = {workspace = true}
hala-io-util = {workspace = true, features = ["async_io", "io_group"]}
log = {workspace = true}
mio = {workspace = true}
quiche = {workspace = true, optional = true}
rand = {workspace = true, optional = true}
ring = {workspace = true, optional = true}

[dev-dependencies]
divan = {workspace = true}
hala-io-test = {workspace = true}
pretty_env_logger = {workspace = true}
rand = {workspace = true}

[features]
default = ["quice"]
quice = ["quiche", "rand", "ring"]

[[bench]]
harness = false
name = "udp_bench"

[[bench]]
harness = false
name = "tcp_bench"
