[package]
description = "Hala network framework"
documentation = "https://docs.rs/hala-net"
edition.workspace = true
license = "MIT"
name = "hala-net"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
future-mediator = {workspace = true}
futures = {workspace = true}
hala-io-driver = {workspace = true}
hala-io-util = {workspace = true}
log = {workspace = true}
mio = {workspace = true}
quiche = {workspace = true, optional = true}
rand = {workspace = true, optional = true}
ring = {workspace = true, optional = true, features = ["std"]}
thiserror = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
hala-io-test = {workspace = true}
pretty_env_logger = {workspace = true}
rand = {workspace = true}

[features]
default = ["quice"]
quice = ["quiche", "rand", "ring"]

[[bench]]
harness = false
name = "udp_bench"

[[bench]]
harness = false
name = "tcp_bench"
