[package]
edition.workspace = true
name = "hala-quic-tunnel"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qtun-server"
path = "bin/server/src/main.rs"

[[bin]]
name = "qtun-client"
path = "bin/client/src/main.rs"

[dependencies]
anyhow = {workspace = true}
bytes = {workspace = true}
clap = {workspace = true, optional = true}
log = {workspace = true}
mio = {workspace = true}
pretty_env_logger = {workspace = true}
serde = {workspace = true, optional = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[features]
config_clap = ["clap"]
config_serde = ["serde"]
default = ["config_serde", "config_clap"]
