[package]
description = "Hala async quic protocol crate base on quiche"
edition.workspace = true
name = "hala-quic"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace = true}
quiche = {workspace = true}
rand = {workspace = true}

[dev-dependencies]
pretty_env_logger = {workspace = true}
