[package]
description = "Hala io reactor framework"
edition.workspace = true
name = "hala-reactor"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace = true}
mio = {workspace = true}

[features]
multi-thread = []
single-thread = []
