[package]
documentation = "https://docs.rs/hala-rproxy"
edition.workspace = true
license = "MIT"
name = "hala-rproxy"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
futures = {workspace = true}
hala-io-util = {workspace = true}
hala-net = {workspace = true}
log = {workspace = true}

[dev-dependencies]
pretty_env_logger = {workspace = true}
