[package]
description = "Hala asynchronous socket implementation"
edition.workspace = true
name = "hala-socket"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = {workspace = true}
futures = {workspace = true, optional = true}
hala-io-test = {workspace = true, default = false, optional = true}
hala-reactor = {workspace = true, optional = true}
mio = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]

pretty_env_logger = {workspace = true}

[features]
default = ["single-thread"]
multi-thread = ["hala-reactor/multi-thread", "hala-io-test/multi-thread"]
single-thread = ["hala-reactor/single-thread", "hala-io-test/single-thread"]
