[package]
description = "Hala asynchronous socket implementation"
edition.workspace = true
name = "hala-socket"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
hala-reactor = {workspace = true, optional = true}
log = {workspace = true}
mio = {workspace = true}
quiche = {workspace = true, optional = true}
thiserror = {workspace = true}

[dev-dependencies]
hala-io-test = {workspace = true, features = ["debug"]}
pretty_env_logger = {workspace = true}

[features]
default = ["multi-thread", "quic"]
multi-thread = ["hala-reactor/multi-thread"]
quic = ["quiche"]
single-thread = ["hala-reactor/single-thread"]
