[package]
description = "Hala timewheel implementation"
edition.workspace = true
name = "hala-timewheel"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
divan = {workspace = true}

[[bench]]
harness = false
name = "timewheel"
