[package]
description = "Hala tunnel protocol implementation over quic"
edition.workspace = true
name = "hala-tunnel-quic"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = {workspace = true}
