[package]
edition.workspace = true
name = "hala-tunnel"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = {workspace = true}
futures = {workspace = true}
thiserror-no-std = {workspace = true}

[dev-dependencies]
futures-test = {workspace = true}
