[package]
description = "Hala rust standard library facade"
documentation = "https://docs.rs/hala-rs"
edition.workspace = true
license = "MIT"
name = "hala-rs"
repository.workspace = true
version.workspace = true

[dependencies]
hala-future = {workspace = true}
hala-io = {workspace = true}
hala-lockfree = {workspace = true}
hala-ops = {workspace = true}
hala-pprof = {workspace = true}
hala-qtun = {workspace = true}
hala-quic = {workspace = true}
hala-sync = {workspace = true}
hala-tcp = {workspace = true}
hala-test = {workspace = true}
hala-tls = {workspace = true}
hala-udp = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
futures = {workspace = true}
hala-io = {workspace = true, features = ["mio-driver"]}
pretty_env_logger = {workspace = true}

[features]
default = ["mio-driver", "futures-executor"]
futures-executor = ["hala-future/futures-executor"]
mio-driver = ["hala-io/mio-driver"]
qtun-app = ["hala-qtun/app"]
qtun-client = ["hala-qtun/client"]
qtun-server = ["hala-qtun/server"]

[[bench]]
harness = false
name = "tcp_bench"

[[bench]]
harness = false
name = "quic_bench"
