[package]
edition = "2021"
name = "rgnix"
repository = "https://github.com/HalaOS/hala-rs.git"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
clap = {version = "^4.4", features = ["derive"]}
duration-str = "0.7.1"
hala-rs = {path = "../hala"}
log = {version = "^0.4"}
pretty_env_logger = "^0.5"
uuid = "^1.6.1"
