[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/HalaOS/hala-rs.git"
version = "0.1.3"

[workspace.dependencies]
async-trait = "^0.1"
clap = {version = "^4.4", features = ["derive"]}
dashmap = "^5.5"
futures = {version = "^0.3.29", features = ["executor", "thread-pool"]}
hala-rs = {path = "../hala", version = "^0.1"}
log = {version = "^0.4"}
multiaddr = {version = "^0.18"}
thiserror = "^1.0"
uuid = {version = "^1.7", features = ["v4"]}

rgnix = {path = "./crates/rgnix", version = "^0.1"}
