[package]
description = "Hala timewheel implementation"
edition.workspace = true
name = "timewheel"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
divan = {workspace = true}

[features]
default = ["std"]
std = []

[[bench]]
harness = false
name = "timewheel"
