[package]
description = "hala asynchronous io programming primitive types"
documentation = "https://docs.rs/hala-io"
edition.workspace = true
license = "MIT"
name = "hala-io"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmask-enum = {workspace = true}
bytes = {workspace = true}
dashmap = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
mio = {workspace = true, optional = true}
thiserror = {workspace = true}

hala-future = {workspace = true}
hala-lockfree = {workspace = true}
hala-sync = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
current = []
mio-driver = ["mio"]
