[package]
description = "Google leveldb binding for hala system"
documentation = "https://docs.rs/hala-lockfree"
edition.workspace = true
license = "MIT"
name = "hala-leveldb"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb-sys = {workspace = true, features = ["snappy"]}
log = {workspace = true}
