[package]
description = "Some lockfree structure for rust"
documentation = "https://docs.rs/hala-lockfree"
edition.workspace = true
license = "MIT"
name = "hala-lockfree"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcar = {workspace = true}
dashmap = {workspace = true}

[dev-dependencies]
divan = {workspace = true}

[[bench]]
harness = false
name = "lockfree"

[[bench]]
harness = false
name = "mutex"
