[package]
description = "Hala extension of std::ops crate"
documentation = "https://docs.rs/hala-ops"
edition.workspace = true
license = "MIT"
name = "hala-ops"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
