[package]
description = "Hala performance profiling toolkit"
documentation = "https://docs.rs/hala-pprof"
edition.workspace = true
license = "MIT"
name = "hala-pprof"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = {version = "^0.3"}
dashmap = {workspace = true}
log = {workspace = true}
protobuf = {workspace = true}
serde = {workspace = true, optional = true}

hala-sync = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
cc = {workspace = true}
protobuf-codegen = {workspace = true}
protoc-bin-vendored = {workspace = true}

[features]
serialize-serde = ["serde"]

[[bench]]
harness = false
name = "pprof"

[[bench]]
harness = false
name = "standard"
