[package]
description = "Hala performance profiling toolkit"
documentation = "https://docs.rs/hala-pprof"
edition.workspace = true
license = "MIT"
name = "hala-pprof"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = {workspace = true}
bson = {workspace = true, optional = true}
bytes = {workspace = true}
dashmap = {workspace = true}
libc = {workspace = true}
log = {workspace = true}
protobuf = {workspace = true}
serde = {workspace = true}

hala-leveldb = {workspace = true, optional = true}
hala-pprof-derive = {workspace = true}
hala-sync = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
cc = {workspace = true}
protobuf-codegen = {workspace = true}
protoc-bin-vendored = {workspace = true}

[features]
default = ["leveldb"]
leveldb = ["hala-leveldb", "bson"]

[[bench]]
harness = false
name = "pprof"

[[bench]]
harness = false
name = "standard"

[[bench]]
harness = false
name = "log"
