[package]
description = "Hala performance profiling toolkit"
documentation = "https://docs.rs/hala-pprof"
edition.workspace = true
license = "MIT"
name = "hala-pprof"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = {workspace = true}
bson = {workspace = true, optional = true}
hala-leveldb = {workspace = true, optional = true}
hala-pprof-derive = {workspace = true}
hala-sync = {workspace = true}
log = {workspace = true, optional = true}
protobuf = {workspace = true, optional = true}
serde = {workspace = true}

[dev-dependencies]
divan = {workspace = true}
pretty_env_logger = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
cc = {workspace = true}
protobuf-codegen = {workspace = true}
protoc-bin-vendored = {workspace = true}

[features]
default = ["gperf", "prolog", "cpu_profiler", "heap_profiler"]

cpu_profiler = []
gperf = ["protobuf"]
heap_profiler = []
leveldb = ["hala-leveldb", "bson"]
prolog = ["log"]

[[bench]]
harness = false
name = "prof_alloc"

[[bench]]
harness = false
name = "sysm_alloc"

[[bench]]
harness = false
name = "log"
