[package]
description = "Hala synchronous primitive"
documentation = "https://docs.rs/hala-sync"
edition.workspace = true
license = "MIT"
name = "hala-sync"
repository.workspace = true
version.workspace = true

[dependencies]
dashmap = {workspace = true}
hala-lockfree = {workspace = true}
log = {workspace = true}
parking_lot = {workspace = true, optional = true}

[dev-dependencies]
divan = {workspace = true}
futures = {workspace = true}
futures-test = {workspace = true}
pretty_env_logger = {workspace = true}

[features]
default = ["use_parking_lot", "trace_lock"]
trace_lock = []
use_parking_lot = ["parking_lot"]
