[package]
description = "Hala test derive crate"
documentation = "https://docs.rs/hala-test"
edition.workspace = true
license = "MIT"
name = "hala-test"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "^1.0"
syn = {version = "^2.0", features = ["full", "parsing"]}

[lib]
proc-macro = true
