[package]
description = "Proc macros for hala test"
documentation = "https://docs.rs/hala-test"
edition.workspace = true
license = "MIT"
name = "hala-test"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = {workspace = true}
syn = {workspace = true}

[lib]
proc-macro = true
